# estrutura_projeto_ETL

./: .pre-commit-config.yaml  README.md  kill.ps1  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  teste_request.py
app/pipeline/: __init__.py  data.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
teste/: test_pipeline.py
