[tool.poetry]
name = "estrutura-projeto-etl"
version = "0.1.0"
description = "Projeto de ETL do zero"
authors = ["Brunocodigoestudo <brunoeng.proj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
