[tool.poetry]
name = "estrutura-projeto-etl"
version = "0.1.0"
description = "Projeto de ETL do zero"
authors = ["Brunocodigoestudo <brunoeng.proj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.0"
pytest = "^7.4.4"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.0"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pymdown-extensions = "^10.7"
mkdocs-material = "^9.5.6"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-bootstrap = "^1.1.1"
mkdocstrings = "^0.24.0"
pygments = "^2.17.2"
pre-commit = "^3.6.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
start = "python app/main.py"
kill = 'powershell -File "C:\\Users\\User\\Desktop\\ESTRUTURA_PROJETO_ETL\\kill.ps1'



